# py-cooklang

./: .flake8  .gitignore  .pyre_configuration  cooklang.py  pyproject.toml  tests.py
.github/workflows/: ci.yaml
