[tool.poetry]
name = "cooklang"
version = "0.0.1"
description = "Parser and utilities for handling recipes using the cooklang markup language."
authors = ["Luiz Ribeiro <luizribeiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^5.0.0"
green = "^3.3.0"
pyexpect = "^1.0.21"
pyre-check = "^0.9.6"
python-lsp-server = "^1.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
